tests/errors/ExtraClosingBrace.java
package errors;

//PR#219

public aspect ExtraClosingBrace {
    public void doIt() {
        
    }}}}
